# DeckProblem

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  cards.py  solver.py
src/: BUILD.bazel  cards.py  solver.py
src/tests/: test_cards.py  test_solver.py
tests/: test_cards.py  test_solver.py
